API V2 update, Weby in API V2

--- a/Lib.Data.External/Lib.Data.External.csproj
+++ b/Lib.Data.External/Lib.Data.External.csproj
@@ -517,6 +517,7 @@
     <Compile Include="RPP\OVM\seznamkatprirazenychkovm.cs" />
     <Compile Include="RPP\tmp.cs" />
     <Compile Include="Vazby\FromGraphDb.cs" />
+    <Compile Include="Zabbix\WebStatusExport.cs" />
     <Compile Include="Zabbix\ZabAvailability.cs" />
     <Compile Include="Zabbix\ZabAvailabilityInterval.cs" />
     <Compile Include="Zabbix\ZabAvailabilityStatistics.cs" />
