disable kindex for public

--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -21,6 +21,8 @@
     <add key="DefaultIndexName" value="hlidacsmluv" />
     <add key="ESDebugDataEnabled" value="true" />
 
+    <add key="KIndex" value="private" />
+    
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
