--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HlidacStatu.Web</RootNamespace>
     <AssemblyName>HlidacStatu.Web</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
@@ -223,7 +223,6 @@
     <Reference Include="System.Console, Version=4.0.1.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Console.4.3.1\lib\net46\System.Console.dll</HintPath>
     </Reference>
-    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Linq" />
@@ -417,8 +416,8 @@
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="netstandard" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml.ReaderWriter, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Xml.ReaderWriter.4.3.1\lib\net46\System.Xml.ReaderWriter.dll</HintPath>
     </Reference>
@@ -744,9 +743,6 @@
     <Content Include="Scripts\Highcharts-6\themes\sand-signika.js.map" />
     <Content Include="Scripts\Highcharts-6\themes\skies.js.map" />
     <Content Include="Scripts\Highcharts-6\themes\sunset.js.map" />
-    <Content Include="App_Codea\UtilWebyChart.cshtml" />
-    <Content Include="App_Codea\SuperSearch.cshtml" />
-    <Content Include="App_Codea\Util.cshtml" />
     <Content Include="Scripts\d3\d3.js" />
     <Content Include="Scripts\d3\d3.min.js" />
     <Content Include="Scripts\font-awesome\css\font-awesome.css" />
@@ -1053,13 +1049,10 @@
     <Content Include="Scripts\highlight\styles\zenburn.css" />
     <Content Include="Scripts\hlidac.v1.7.js" />
     <Content Include="Scripts\hlidac.v1.8.js" />
-    <Content Include="App_Codea\SearchResults.cshtml" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Connected Services\Application Insights\ConnectedService.json" />
-    <Content Include="App_Codea\Fn.cshtml" />
-    <Content Include="App_Codea\UtilChart.cshtml" />
     <Content Include="Scripts\iframeResizer.contentWindow.min.js" />
     <Content Include="Scripts\iframeResizer.min.js" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
@@ -1137,7 +1130,6 @@
     <Content Include="Content\bootstrap\bootstrap.less" />
     <Content Include="Content\bootstrap\badges.less" />
     <Content Include="Content\bootstrap\alerts.less" />
-    <Content Include="App_Codea\Infographic.cshtml" />
     <Content Include="apiv2doc.json" />
     <Content Include="App_Data\Czech.3-2-5.dic">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -1157,6 +1149,7 @@
     <Content Include="App_Code\SuperSearch.cshtml" />
     <Content Include="App_Code\UtilChart.cshtml" />
     <Content Include="App_Code\UtilWebyChart.cshtml" />
+    <Content Include="App_Code\WebKidx.cshtml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
