--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -466,6 +466,7 @@
     <Compile Include="Analysis\KorupcniRiziko\KIndexData.UcetniJednotkaInfo.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KoncentraceDodavateluIndexy.cs" />
     <Compile Include="Analysis\KorupcniRiziko\KoncentraceDodavateluObor.cs" />
+    <Compile Include="Analysis\KorupcniRiziko\Statistics.cs" />
     <Compile Include="Analysis\OsobaStatistic.cs" />
     <Compile Include="Analysis\ComplexStatistic.cs" />
     <Compile Include="Analysis\RatingData.cs" />
