--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -527,7 +527,7 @@
       <DependentUpon>Response.xsd</DependentUpon>
     </Compile>
     <Compile Include="Data\Firma.Hint.cs" />
-    <Compile Include="Data\Firma.Obory.cs" />
+    <Compile Include="Data\Firma.Zatrideni.cs" />
     <Compile Include="Data\Firma.Lazy.cs" />
     <Compile Include="Data\Firma.Search.cs" />
     <Compile Include="Data\FirmaHint.cs">
