--- a/Web.Statu/WebApp.config
+++ b/Web.Statu/WebApp.config
@@ -22,6 +22,7 @@
     <add key="ESDebugDataEnabled" value="true" />
 
     <add key="KIndex" value="private" />
+    <add key="KIdxIconStyle" value="hranate" />
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
