--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,7 @@ Web.Statu/App_Data/*.filecache.data
 Web.Statu/App_Data/*.filecache.content
 Web.Statu/App_Data/dump/*
 !Web.Statu/App_Data/KIndex*
+!Web.Statu/App_Data/Label*.png
 
 
 
