--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -83,6 +83,7 @@
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
