--- a/.gitignore
+++ b/.gitignore
@@ -363,6 +363,7 @@ Web.Statu/App_Data/*.filecache.content
 Web.Statu/App_Data/dump/*
 !Web.Statu/App_Data/KIndex*
 !Web.Statu/App_Data/Label*.png
+!Web.Statu/App_Data/PercentileBanner.svg
 
 
 
