--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -607,9 +607,24 @@
     <Content Include="Content\Img\top_red.png" />
     <Content Include="Content\Img\_Hlidac smluv.svg" />
     <Content Include="Content\jsoneditor.css" />
+    <Content Include="Content\kindex\hranate\icon-.svg" />
+    <Content Include="Content\kindex\hranate\iconA.svg" />
+    <Content Include="Content\kindex\hranate\iconB.svg" />
+    <Content Include="Content\kindex\hranate\iconC.svg" />
+    <Content Include="Content\kindex\hranate\iconD.svg" />
+    <Content Include="Content\kindex\hranate\iconE.svg" />
+    <Content Include="Content\kindex\hranate\iconF.svg" />
+    <Content Include="Content\kindex\kulate\iconA.svg" />
+    <Content Include="Content\kindex\kulate\iconB.svg" />
+    <Content Include="Content\kindex\kulate\iconC.svg" />
+    <Content Include="Content\kindex\kulate\iconD.svg" />
+    <Content Include="Content\kindex\kulate\iconE.svg" />
+    <Content Include="Content\kindex\kulate\iconF.svg" />
     <Content Include="Content\new.css" />
     <Content Include="Content\socialBanner.css" />
     <Content Include="Content\social-share-kit.css" />
+    <Content Include="Content\temp\stats-graph-bg.png" />
+    <Content Include="Content\temp\stats-graph.png" />
     <Content Include="Content\typeaheadjs.css" />
     <Content Include="Content\visavail.css" />
     <Content Include="favicon.ico" />
@@ -1172,6 +1187,7 @@
     <Content Include="App_Code\SuperSearch.cshtml" />
     <Content Include="App_Code\UtilChart.cshtml" />
     <Content Include="App_Code\UtilWebyChart.cshtml" />
+    <Content Include="Content\temp\stats-graph.zip" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
