--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -520,6 +520,7 @@
     <Compile Include="Framework\RemoteUrlWebCacheManager.cs" />
     <Compile Include="Framework\Html2Png.cs" />
     <Compile Include="Framework\Report\covid_pomoc.cs" />
+    <Compile Include="Framework\Restricted.cs" />
     <Compile Include="Framework\RobotFromIP.cs" />
     <Compile Include="Framework\Shared\Data.cs" />
     <Compile Include="Framework\LimitedAccess.cs" />
@@ -1635,6 +1636,8 @@
     <Content Include="Views\Kindex\Zebricek.Skokani.cshtml" />
     <Content Include="Views\Kindex\Zebricek_child.cshtml" />
     <Content Include="Views\Kindex\Detail_child.cshtml" />
+    <Content Include="Views\Home\Subjekt2.cshtml" />
+    <Content Include="Views\Home\Subjekt2_child.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
