new subjekt profile

--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -1637,7 +1637,8 @@
     <Content Include="Views\Kindex\Zebricek_child.cshtml" />
     <Content Include="Views\Kindex\Detail_child.cshtml" />
     <Content Include="Views\Home\Subjekt2.cshtml" />
-    <Content Include="Views\Home\Subjekt2_child.cshtml" />
+    <Content Include="Views\Home\Subjekt2_Profile.cshtml" />
+    <Content Include="Views\Home\Subjekt2_EmptyProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
